--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+*{
+    margin: 0;
+    border: 0;
+    font-family: 'Neucha', cursive;
+}
 .container {
     display: flex;
     flex-direction:column;
@@ -12,7 +17,14 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    overflow: hidden;
 }
+
+
+
+.main-header .icon {
+    display: none;
+  }
 
 li{
     display: inline-block;
@@ -27,16 +39,18 @@ li{
     width: 80px;
     height: 60px;
     margin-left: 10px;
-    border: 2px solid white;
+    border: 2px solid black;
     border-bottom-right-radius: 10px;
     border-top-left-radius: 10px;
-    transition: border 2s;
-    transition-timing-function: ease;
+    /* transition: box-shadow 1s;
+    transition-timing-function: ease-in-out; */
 }
 
 .logo:hover {
     border: 2px solid black;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.9), 0 6px 20px 0 rgba(0, 0, 0, 0.9);
 }
+
 
 .nav-link {
     color: black;
@@ -68,7 +82,12 @@ li{
     visibility: visible;
     -webkit-transform: scaleX(1);
     transform: scaleX(1);
-  }
+}
+
+
+
+
+
 
 .home-splash{
     width: 100vw;
@@ -96,4 +115,68 @@ li{
 }
 .text-description{
     border: 1px solid;
+}
+
+
+
+
+@media screen and (max-width: 600px){
+
+    .nav-link {
+        display: none;
+    }
+
+    /* .nav-link a:not(:first-child) {display: none;} */
+
+    .main-header .icon {
+        display: block;
+        float: inherit;
+      }
+
+    .mob-menu {
+        width: 35px;
+        height: 5px;
+        background-color: black;
+        margin: 6px;
+    }
+
+    /* JS second part */
+
+    .main-header.responsive {
+        height: 26vh;
+        position: relative;
+        padding-top: 18px;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+        
+    }
+
+    .main-header.responsive .icon {
+        position: absolute;
+        right: 0;
+        top: 0;
+        padding-top: 30px;
+    }
+
+    .main-header.responsive nav ul{
+        padding-left: 0px;
+    }
+
+    .main-header.responsive nav ul li{
+        display: block;
+    }
+
+
+    .main-header.responsive nav ul li .nav-link, .logo-container{
+        float: none;
+        display: block;
+        text-align: left;
+    }
+    
+
+
+
+
 }
