--- a/styleCard.css
+++ b/styleCard.css
@@ -1,3 +1,7 @@
+html {
+    font-family: 'Quattrocento', serif;
+}
+
 .container {
     display: flex;
     flex-direction:column;
@@ -27,16 +31,18 @@ li{
     width: 80px;
     height: 60px;
     margin-left: 10px;
-    border: 2px solid white;
+    border: 2px solid black;
     border-bottom-right-radius: 10px;
     border-top-left-radius: 10px;
-    transition: border 2s;
-    transition-timing-function: ease;
+    /* transition: box-shadow 1s;
+    transition-timing-function: ease-in-out; */
 }
 
 .logo:hover {
     border: 2px solid black;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.9), 0 6px 20px 0 rgba(0, 0, 0, 0.9);
 }
+
 
 .nav-link {
     color: black;
@@ -72,28 +78,42 @@ li{
 
 
 
-.exercise-overview {
-    width: 100vw;
-    height: 61vh;
-    background-color:#519872;
+
+
+.cards-container {
     display: flex;
-    flex-flow: row wrap;
+    flex-direction: row;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
+    width: 100vw;
+}
+
+.exercise-overview {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    width: 100vw;
+    height: 46vh;
+    background-color:#519872;
 }
 
 .cards {
+    display: inline-block;
     position: relative;
-    width: 27%;
+    width: 23%;
 }
 
 .card-img {
-    display: inline-block;
-    width: 100%;
-    height: 55vh;
-    border-top-left-radius: 10px;
-    border-bottom-right-radius: 10px;
     
+    width: 100%;
+    height: 36vh;
+    /* border-top-left-radius: 10px;
+    border-bottom-right-radius: 10px; */
+    border-radius: 50px 10px /10px 70px;
+    box-shadow: -20px 20px 20px 0 rgba(32, 16, 3, 0.9), -2px 1px 16px 0px rgba(34, 16, 3, 0.9);
 }
 
 .overlay {
@@ -101,13 +121,20 @@ li{
   bottom: 100%;
   left: 0;
   right: 0;
-  background-color:#474747;
+  background-color: #DAA520; /* #474747 */
+  opacity: 0.9;
   overflow: hidden;
   width: 100%;
   height:0;
-  border-top-left-radius: 10px;
-  border-bottom-right-radius: 10px;
+  /* border-top-left-radius: 10px;
+  border-bottom-right-radius: 10px; */
+  border-radius: 50px 10px /10px 70px;
   transition: .5s ease;
+}
+
+.overlay-text, .links{
+  width: inherit;
+  height: inherit;
 }
 
 .cards:hover .overlay {
@@ -117,17 +144,24 @@ li{
 
 
 .links {
-  white-space: nowrap; 
-  color: white;
+  text-decoration: none;
+  color: black;
   font-size: 20px;
-  position: absolute;
-  overflow: hidden;
+  text-align: center;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
+  transform: translate(-15%, 0%)
 }
 
+
+
+/********************************************/
+.links:hover {
+    border-bottom: 2px solid black;
+    /* text-shadow: 5px 5px 5px #fefe22;  #cb410b */
+}
+
+/**********************************************/
 
 
 .entertainment-overview{
@@ -158,3 +192,4 @@ li{
 .border-top{
     border: 1px solid;
 }
+
