--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
 .main-header {
     width: 100vw;
     height: 12vh;
+    border-bottom: 2px solid black;
     background-color: #E2EFDE;
     display: flex;
     flex-direction: row;
@@ -48,7 +49,7 @@ li{
 
 .logo:hover {
     border: 2px solid black;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.9), 0 6px 20px 0 rgba(0, 0, 0, 0.9);
+    box-shadow: -6px 4px 14px 0px rgba(0, 0, 0, 0.9), -1px 1px 5px 0 rgba(0, 0, 0, 0.9);
 }
 
 
