--- a/pages.css
+++ b/pages.css
@@ -27,14 +27,15 @@
 
 .content-container{
     width: 100vw;
-    height: 80vh;
+    min-height: 80vh;
     background-color: #519872;
     display: flex;
     flex-wrap: wrap;
-    /* padding: 2%; */
-    /* border: 2px solid yellow; */
+    padding: 2%;
+   
+    /* border: 2px solid rgb(0, 0, 0); */
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
    
 }
 
@@ -45,5 +46,11 @@
     /* flex: 0 1 200px; */
     align-self: start;
     margin: 4%;
-    
 }
+    .card-inner-text{
+        background-color: gray;
+    }
+    .card-inner-graphic {
+        max-width: 100%;
+        max-height: 65%;
+    }
