--- a/style.css
+++ b/style.css
@@ -134,12 +134,14 @@ li{
         float: inherit;
       }
 
-    .mob-menu {
+    .mob-menu1, .mob-menu2, .mob-menu3 {
         width: 35px;
         height: 5px;
         background-color: black;
         margin: 6px;
     }
+
+
 
     /* JS second part */
 
@@ -161,12 +163,19 @@ li{
         padding-top: 30px;
     }
 
+   
     .main-header.responsive nav ul{
-        padding-left: 0px;
+        padding-left: 0px;  
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+ 
     }
 
     .main-header.responsive nav ul li{
         display: block;
+        
     }
 
 
@@ -174,6 +183,21 @@ li{
         float: none;
         display: block;
         text-align: left;
+    }
+
+    .mob-menu.change .mob-menu1 {
+        -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+        transform: rotate(-45deg) translate(-9px, 6px);
+
+    }
+
+    .mob-menu.change .mob-menu2 {
+        opacity: 0;
+    }
+
+    .mob-menu.change .mob-menu3 {
+        -webkit-transform: rotate(45deg) translate(-8px, -8px);
+        transform: rotate(45deg) translate(-8px, -8px);
     }
     
 
