--- a/styleCard.css
+++ b/styleCard.css
@@ -11,12 +11,18 @@ html {
 .main-header {
     width: 100vw;
     height: 12vh;
+    border-bottom: 2px solid black;
     background-color: #E2EFDE;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    overflow: hidden;
 }
+
+.main-header .icon {
+    display: none;
+  }
 
 li{
     display: inline-block;
@@ -40,7 +46,7 @@ li{
 
 .logo:hover {
     border: 2px solid black;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.9), 0 6px 20px 0 rgba(0, 0, 0, 0.9);
+    box-shadow: -6px 4px 14px 0px rgba(0, 0, 0, 0.9), -1px 1px 5px 0 rgba(0, 0, 0, 0.9);
 }
 
 
@@ -81,29 +87,30 @@ li{
 
 
 .cards-container {
-    display: flex;
+    /* display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: center;
+    justify-content: center; */
     width: 100vw;
 }
 
-.exercise-overview {
+.exercise-card {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    width: 100vw;
-    height: 46vh;
+    width: 100%;
+    /* height: 162vh; */
     background-color:#519872;
 }
 
 .cards {
     display: inline-block;
     position: relative;
-    width: 23%;
+    width: 300px;
+    margin: 60px;
 }
 
 .card-img {
@@ -121,8 +128,8 @@ li{
   bottom: 100%;
   left: 0;
   right: 0;
-  background-color: #DAA520; /* #474747 */
-  opacity: 0.9;
+  background-color: #fac773; /* #474747 */
+  /* opacity: 0.9; */
   overflow: hidden;
   width: 100%;
   height:0;
@@ -163,7 +170,7 @@ li{
 
 /**********************************************/
 
-
+/* 
 .entertainment-overview{
     width: 100vw;
     height: 61vh;
@@ -182,7 +189,7 @@ li{
     flex-flow: row wrap;
     align-items: center;
     justify-content: center;
-}
+} */
 
 .footer-normal{
     width: 100vw;
@@ -193,3 +200,122 @@ li{
     border: 1px solid;
 }
 
+/*****************/
+
+/* .home-splash{
+    width: 100vw;
+    height: 74vh;
+    background-color:#519872;
+}
+
+
+.exercise-overview{
+    width: 100vw;
+    height: 54vh;
+    background-color:#E2EFDE;
+}
+
+.entertainment-overview, .learn-overview{
+    width: 100vw;
+    height: 54vh;
+    background-color:#E2EFDE;
+}
+
+.footer-normal{
+    width: 100vw;
+    height: 10vh;
+    background-color:#474747;
+}
+.text-description{
+    border: 1px solid;
+} */
+
+
+
+/****************************/
+
+
+@media screen and (max-width: 600px){
+
+    .nav-link {
+        display: none;
+    }
+
+    /* .nav-link a:not(:first-child) {display: none;} */
+
+    .main-header .icon {
+        display: block;
+        float: inherit;
+      }
+
+    .mob-menu1, .mob-menu2, .mob-menu3 {
+        width: 35px;
+        height: 5px;
+        background-color: black;
+        margin: 6px;
+    }
+
+
+
+    /* JS second part */
+
+    .main-header.responsive {
+        height: 26vh;
+        position: relative;
+        padding-top: 18px;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+        
+    }
+
+    .main-header.responsive .icon {
+        position: absolute;
+        right: 0;
+        top: 0;
+        padding-top: 30px;
+    }
+
+   
+    .main-header.responsive nav ul{
+        padding-left: 0px;  
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+ 
+    }
+
+    .main-header.responsive nav ul li{
+        display: block;
+        
+    }
+
+
+    .main-header.responsive nav ul li .nav-link, .logo-container{
+        float: none;
+        display: block;
+        text-align: left;
+    }
+
+    .mob-menu.change .mob-menu1 {
+        -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+        transform: rotate(-45deg) translate(-9px, 6px);
+
+    }
+
+    .mob-menu.change .mob-menu2 {
+        opacity: 0;
+    }
+
+    .mob-menu.change .mob-menu3 {
+        -webkit-transform: rotate(45deg) translate(-8px, -8px);
+        transform: rotate(45deg) translate(-8px, -8px);
+    }
+    
+
+
+
+
+}
