replaced dummytext from homepage,added h4,  switched learn and entertainment classes in the index.html so they match the structure

--- a/styleCard.css
+++ b/styleCard.css
@@ -14,7 +14,7 @@ html {
 
 .main-header {
     width: 100vw;
-    /* height: 12vh; */
+    height: 11vh;
     /* border-bottom: 2px solid black; */
     background-color: #E2EFDE;
     display: flex;
