added margin to text-description h3 and h4 for main page

--- a/style.css
+++ b/style.css
@@ -168,8 +168,18 @@ font-family: 'Sen', sans-serif;
   }
 }
 
-
-
+.text-description h2{
+  text-align: center;
+  margin-top: 10vh;
+  margin-bottom: 5vh;
+  font-size: 2em;
+}
+.text-description h3{
+  margin-bottom: 5%;
+}
+.text-description-learn h3{
+  margin-bottom: 5%;
+}
 /*********** Home-splash *************/
 
 
@@ -178,6 +188,7 @@ font-family: 'Sen', sans-serif;
   width: 80%;
   
   margin-top: 5%;
+  align-self: center;
 }
 .inside-img {
   max-height: 90%;
@@ -203,6 +214,14 @@ font-family: 'Sen', sans-serif;
     flex-wrap: wrap-reverse;
     width: 100%;
     justify-content: center;
+  }
+  .text-description h2 {
+    
+    margin-top: 2%;
+  }
+  .text-description h4 {
+    
+    margin-bottom: 10%;
   }
   .inside-img {
     max-width: 100%;
